examples/compiler_errors/row_effects/unresolved_row_subtract_single_e419.flx
fn unresolved(x: Int) -> Int with |e - IO {
    x
}

fn main() -> Unit {
    let _ = unresolved(1)
}
